ch3/src/snapshots/ch3__tests__move_biasing.snap
---
source: ch3/src/lib.rs
expression: prog
---
extern read_int, print_int, print_str, print_bool, print_newline, initialize_runtime, allocate, new_string
section .text

start:
    mov rbx, 1
    mov qword [rbp - 8], 42
    mov rcx, 7
    add rcx, rbx
    mov rbx, rcx
    add rcx, qword [rbp - 8]
    neg rbx
    mov rax, rcx
    add rax, rbx
    jmp conclusion

    global _start
_start:
    push rbp
    mov rbp, rsp
    sub rsp, 8
    push rbx
    jmp start

conclusion:
    mov rdi, rax
    call print_int
    call print_newline
    pop rbx
    mov rsp, rbp
    pop rbp
    mov rax, 60
    mov rdi, 0
    syscall

