ch3/src/snapshots/ch3__tests__nested_prims.snap
---
source: ch3/src/lib.rs
expression: prog
---
extern rt_print_int, rt_print_newline, rt_read_int
section .text

.start:
    call rt_read_int
    mov rbx, rax
    mov rbx, 5
    call rt_read_int
    mov rdx, rax
    neg rdx
    mov rcx, -2
    add rcx, rbx
    mov rax, rdx
    add rax, rcx
    jmp .epilogue

    global _start
    align 8
_start:
    push rbp
    mov rbp, rsp
    sub rsp, 8
    push rbx
    jmp .start

.epilogue:
    mov rdi, rax
    call rt_print_int
    call rt_print_newline
    pop rbx
    mov rsp, rbp
    pop rbp
    mov rax, 60
    mov rdi, 0
    syscall

