ch3/src/snapshots/ch3__tests__spilled.snap
---
source: ch3/src/lib.rs
expression: prog
---
extern rt_read_int, rt_print_int, rt_print_str, rt_print_bool
extern rt_print_newline, rt_initialize, rt_allocate, rt_new_string
extern rt_rootstack_begin
section .text

start:
    call rt_read_int
    mov rdx, rax
    mov rbx, 5
    mov rcx, rdx
    neg rcx
    mov qword [rbp - 24], 7
    mov rsi, rdx
    add rsi, rcx
    add rsi, rbx
    mov r10, -12
    mov r11, -50
    mov r12, 1
    xor r13, r13
    mov r14, 21
    mov r15, 77
    mov qword [rbp - 8], 13
    mov r9, 13
    mov rdi, 47
    mov qword [rbp - 16], 1758
    mov r8, 1000
    neg rdx
    add rcx, qword [rbp - 24]
    add rdi, qword [rbp - 16]
    add r9, rdi
    mov rdi, qword [rbp - 8]
    add rdi, r9
    mov r9, r15
    add r9, rdi
    mov rdi, r14
    add rdi, r9
    mov r9, r13
    add r9, rdi
    mov rdi, r12
    add rdi, r9
    mov r9, r11
    add r9, rdi
    mov rdi, r10
    add rdi, r9
    add rdi, r8
    add rsi, rdi
    add rcx, rsi
    add rbx, rcx
    mov rax, rdx
    add rax, rbx
    jmp conclusion

    global _start
_start:
    push rbp
    mov rbp, rsp
    sub rsp, 24
    push rbx
    push r12
    push r13
    push r14
    push r15
    jmp start

conclusion:
    mov rdi, rax
    call rt_print_int
    call rt_print_newline
    pop r15
    pop r14
    pop r13
    pop r12
    pop rbx
    mov rsp, rbp
    pop rbp
    mov rax, 60
    mov rdi, 0
    syscall

